# blombocom

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: Makefile  pyproject.toml
backend/blombo/: app.py  settings.py
backend/blombo/api/: app.py  router.py  server.py
backend/blombo/api/v1/endpoints/: health.py  text.py
backend/blombo/connectors/: factory.py  gcal.py  gmail.py  markdown.py
backend/blombo/core/: cache.py  context.py  openai_processor.py  text_processor.py  text_processor_config.py  text_processor_factory.py
backend/blombo/llm_providers/: openai.py
backend/tests/connectors/: test_slack.py
backend/tests/llm_providers/: test_openai.py
frontend/: Makefile  package-lock.json
src/blombo/api/: server.py
src/blombo/connectors/: base.py  gdrive.py  slack.py
src/blombo/llm_providers/: base.py
tests/api/: test_server.py
tests/connectors/: test_markdown.py
tests/core/: test_context.py
